Fixed bug with fonts and size on mobile.

--- a/machine/src/components/Cards.css
+++ b/machine/src/components/Cards.css
@@ -6,8 +6,10 @@
  
 }
 
-h1 {
-  text-align: center;
+.cards > h1 {
+  text-align: left;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande,'
+  'Lucida Sans', Arial, sans-serif;
 }
 
 .cards__container {
