--- a/machine/src/components/MachineSection.css
+++ b/machine/src/components/MachineSection.css
@@ -19,6 +19,8 @@ video {
   }
 
   .machine-container >  h1 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande,'
+    'Lucida Sans', Arial, sans-serif;
       color: #fff;
       font-size: 50px;
       margin-bottom: -5px;
@@ -45,14 +47,14 @@ video {
 
   @media screen and (max-width: 960px){
     .machine-container > h1{
-    font-size: 70px;
+    font-size: 50px;
     margin-top:  -150px;
     }
   }
 
   @media screen and (max-width: 768px){
     .machine-container > h1 {
-      font-size: 50px;
+      font-size: 30px;
       margin-top: -100px;
     }
   }
