--- a/machine/src/components/NavBar.css
+++ b/machine/src/components/NavBar.css
@@ -11,7 +11,8 @@
   }
   
   .navbar-container {
-    font-family: fantasy;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande,'
+    'Lucida Sans', Arial, sans-serif;
     color: white;
     display: flex;
     justify-content: center;
